--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/fragment_container"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context=".MainActivity"
-            tools:layout="@layout/fragment_crypto_list" />
+            android:layout_height="662dp"
+            android:orientation="vertical"
+            android:paddingTop="50dp">
+
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/fragment_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context=".MainActivity"
+                tools:layout="@layout/fragment_crypto_list" />
+        </LinearLayout>
 
         <Button
             android:id="@+id/test_api_button"
@@ -19,5 +26,6 @@
             android:text="Test API"
             android:layout_margin="16dp"
             android:layout_gravity="bottom|center_horizontal" />
+
     </FrameLayout>
 </layout>
