--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Theme.AllMarketsTracker" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your theme here. -->
+        <style name="Theme.AllMarketsTracker" parent="Theme.Material3.DayNight">
+        <item name="colorPrimary">@color/purple_200</item>
+        <item name="colorSecondary">@color/purple_700</item>
+        <item name="android:windowBackground">@color/black</item>
+        <item name="android:textColor">@android:color/white</item>
     </style>
 </resources>
