--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,22 +3,38 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="662dp"
             android:orientation="vertical"
-            android:paddingTop="50dp">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
+            <!-- App Title -->
+            <TextView
+                android:id="@+id/app_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:text="@string/allmarketstracker"
+                android:textAlignment="center"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="@android:color/white"
+                android:background="?attr/colorPrimary" />
+
+            <!-- Fragment container -->
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/fragment_container"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
                 tools:context=".MainActivity"
                 tools:layout="@layout/fragment_crypto_list" />
         </LinearLayout>
 
+        <!-- Test API Button -->
         <Button
             android:id="@+id/test_api_button"
             android:layout_width="wrap_content"
@@ -26,6 +42,5 @@
             android:text="Test API"
             android:layout_margin="16dp"
             android:layout_gravity="bottom|center_horizontal" />
-
     </FrameLayout>
 </layout>
