--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
         <style name="Theme.AllMarketsTracker" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorSecondary">@color/purple_700</item>
-        <item name="android:windowBackground">@color/black</item>
-        <item name="android:textColor">@android:color/white</item>
-    </style>
+                <item name="colorPrimary">@color/purple_200</item>
+                <item name="colorSecondary">@color/purple_700</item>
+                <item name="android:windowBackground">@color/black</item>
+                <item name="android:textColor">@android:color/white</item>
+        </style>
+
+        <style name="DetailStat">
+                <item name="android:layout_width">match_parent</item>   <!-- Not ideal -->
+                <item name="android:layout_height">wrap_content</item>  <!-- Not ideal -->
+                <item name="android:textColor">@android:color/white</item>
+                <item name="android:textSize">14sp</item>
+                <item name="android:paddingTop">4dp</item>
+                <item name="android:paddingBottom">4dp</item>
+        </style>
 </resources>
