--- a/app/src/main/res/layout/fragment_crypto_detail.xml
+++ b/app/src/main/res/layout/fragment_crypto_detail.xml
@@ -115,15 +115,11 @@
             android:background="@android:color/darker_gray"
             android:layout_marginBottom="24dp">
 
-            <TextView
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/line_chart"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:text="@string/chart_placeholder"
-                android:textColor="@android:color/white"
-                android:gravity="center"
-                android:textSize="16sp"
-                android:background="#333333" />
+                android:layout_height="250dp"
+                android:layout_marginBottom="24dp" />
 
         </FrameLayout>
 
