--- a/app/src/main/res/layout/fragment_crypto_detail.xml
+++ b/app/src/main/res/layout/fragment_crypto_detail.xml
@@ -121,6 +121,8 @@
                 android:layout_height="250dp"
                 android:layout_marginBottom="24dp" />
 
+            <!-- TODO Fix for graph message for all other cryptos saying there is no graph data -->
+
         </FrameLayout>
 
         <!-- Stats Section -->
