--- a/app/src/main/res/layout/item_portfolio_transaction.xml
+++ b/app/src/main/res/layout/item_portfolio_transaction.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="12dp"
     android:background="@android:color/darker_gray"
@@ -7,9 +9,20 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <!-- Logo ImageView -->
+    <ImageView
+        android:id="@+id/asset_logo"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:contentDescription="@string/crypto_logo"
+        tools:src="@drawable/bch_logo" />
+
     <TextView
         android:id="@+id/coin_name"
-        android:text="Bitcoin (BTC)"
+        android:text="@string/bitcoin_cash_bch"
         android:textStyle="bold"
         android:textColor="@android:color/white"
         android:textSize="18sp"
